<resources>
    <string name="app_name">FlightHelper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

	<string name="no_connectivity_title">No connectivity</string>
	<string name="no_connectivity_explain">Because there is no internet connection app won\'\'t be working correctly. Caching is still in progress.</string>
	<string name="noData">No data</string>
	<string name="retry">Retry</string>
	<string name="originStation">From</string>
	<string name="destinationStation">To</string>
	<string name="departureDate">Departure date</string>
	<string name="search">search</string>
    <string name="summary">Summary</string>
    <string name="adults">Adults</string>
    <string name="teens">Teens</string>
    <string name="kids">kids</string>

</resources>
