<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/originStation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/originStation"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/originStationInput"
            android:layout_width="match_parent"
            android:layout_height="50dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/destinationStation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/destinationStation"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/originStation">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/destinationStationInput"
            android:layout_width="match_parent"
            android:layout_height="50dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/departureDate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/departureDate"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/destinationStation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/departureDateInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/adults"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/adultsNumberPicker"
        app:layout_constraintStart_toStartOf="@id/adultsNumberPicker"
        >
    </TextView>

    <NumberPicker
        android:id="@+id/adultsNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/departureDate" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/teens"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/teenNumberPicker"
        app:layout_constraintStart_toStartOf="@id/teenNumberPicker"
        >
    </TextView>

    <NumberPicker
        android:id="@+id/teenNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toEndOf="@id/adultsNumberPicker"
        app:layout_constraintTop_toBottomOf="@id/departureDate" />


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/kids"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/childrenNumberPicker"
        app:layout_constraintStart_toStartOf="@id/childrenNumberPicker"
        >
    </TextView>

    <NumberPicker
        android:id="@+id/childrenNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toEndOf="@id/teenNumberPicker"
        app:layout_constraintTop_toBottomOf="@id/departureDate" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/flights_recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/childrenNumberPicker"
        app:layout_constraintTop_toBottomOf="@+id/departureDate" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flights_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childrenNumberPicker"
        app:spanCount="2"
        tools:listitem="@layout/flight_item_layout" />

    <TextView
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noData"
        android:textAppearance="?android:textAppearanceMedium"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childrenNumberPicker" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/retry_button"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/childrenNumberPicker" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/visibleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="originStation, destinationStation, departureDate, adultsNumberPicker, teenNumberPicker, childrenNumberPicker, searchButton, flights_recyclerview" />

</androidx.constraintlayout.widget.ConstraintLayout>